syntax = "proto3";
package dozer_admin_grpc;
message ConnectionDetails {
  repeated TableInfo table_info = 1;
}
message TableInfo {
  string table_name = 1;
  repeated ColumnInfo columns = 2;
}
message ColumnInfo {
  string column_name = 1;
  bool is_nullable = 2;
  string udt_name = 3;
  bool is_primary_key = 4;
}